--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,5 +5,5 @@ commit = False
 tag = False
 
 [bumpversion:file:http_shrinkwrap/__init__.py]
-search = __version__ \= '{current_version}'
+search = __version__ = '{current_version}'
 replace = {new_version}
