--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,9 +1,9 @@
 [bumpversion]
-current_version = 0.0.2
+current_version = 0.0.3
 tag_name = {new_version}
 commit = False
 tag = False
 
 [bumpversion:file:http_shrinkwrap/__init__.py]
-search = __version__ = '{current_version}'
+search = __version__ \= '{current_version}'
 replace = {new_version}
