--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-current_version = 0.0.6
+current_version = 0.0.7
 tag_name = {new_version}
-commit = False
-tag = False
+commit = true
+tag = true
 
 [bumpversion:file:http_shrinkwrap/__init__.py]
