--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8]
         poetry-version: [1.0, 1.1.6]
         os: [ubuntu-18.04, ubuntu-20.04, macos-latest, windows-latest]
           #os: [ubuntu-20.04, ]
