--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,6 @@ jobs:
         with:
           poetry-version: ${{ matrix.poetry-version }}
       - name: make env
-        run: make env
+        run: make env - run poetry
+      - name: make test
+        run: make test
