--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,7 @@ jobs:
       matrix:
         python-version: [3.6, 3.7, 3.8]
         poetry-version: [1.0, 1.1.6]
-        os: [ubuntu-18.04, ubuntu-20.04, macos-latest, windows-latest]
-          #os: [ubuntu-20.04, ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
