--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         uses: abatilo/actions-poetry@v2.0.0
         with:
           poetry-version: ${{ matrix.poetry-version }}
-      - name: make env
-        run: make env - run poetry
+      - name: make env - run poetry
+        run: make env
       - name: make test
         run: make test
