--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ curlify = "^2.2.1"
 psutil = "^5.8.0"
 
 [tool.poetry.dev-dependencies]
+Flask = "1.1.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
