--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,8 @@ jobs:
           poetry-version: ${{ matrix.poetry-version }}
       - name: make env - run poetry
         run: make env
+      - name: Install coreutils for macOS
+        if: matrix.os == 'macos-latest'
+        run: brew install coreutils
       - name: make test
         run: make test
