--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
       matrix:
         python-version: [3.8]
         poetry-version: [1.0, 1.1.6]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+          #os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
