--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.8]
         poetry-version: [1.0, 1.1.6]
-        os: [ubuntu-18.04, ubuntu-20.04, macos-latest, windows-latest]
-          #os: [ubuntu-20.04, ]
+          #os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -22,8 +22,10 @@ jobs:
         uses: abatilo/actions-poetry@v2.0.0
         with:
           poetry-version: ${{ matrix.poetry-version }}
-            #- name: make test
-            #run: make test
-          #run: poetry --help
-      - name: penv
-        run: pipenv
+      - name: make env - run poetry
+        run: make env
+      - name: Install coreutils for macOS
+        if: matrix.os == 'macos-latest'
+        run: brew install coreutils
+      - name: make test
+        run: make test
