--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.25.1"
 uncurl = "^0.0.11"
 curlify = "^2.2.1"
 psutil = "^5.8.0"
+setuptools = "^57.2.0"
 
 [tool.poetry.dev-dependencies]
 Flask = "1.1.4"
