--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,7 @@ jobs:
       - name: Install coreutils for macOS
         if: matrix.os == 'macos-latest'
         run: brew install coreutils
-      - name: make test
-        run: make test
+      - name: make test internal
+        run: make test_internel
+      - name: make test external
+        run: make test_external
