--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,6 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: brew install coreutils
       - name: make test internal
-        run: make test_internel
+        run: make test_internal
       - name: make test external
         run: make test_external
